--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,13 +7,15 @@ Maintainer: Tim Bock <tim.bock@numbers.net.au>
 Description: Various analytics to assist in the analysis of the performance of startups.
 License: GPL-3
 LazyData: TRUE
+Depends: R (>= 2.10)
 Suggests:
     testthat
 Imports:
-    lubridate,
     ggplot2,
-    plotly,
-    scales,
+    lubridate,
     methods,
+    plotly,
+    reshape2,
+    scales,
     stats
 RoxygenNote: 5.0.1
