--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(Growth)
 export(Index)
 export(IndexDiagonal)
 export(LifetimeValue)
-export(QuickRatio)
+export(QuickRatioPlot)
 export(Retention)
 export(RevenueData)
 export(RevenueGrowthAccounting)
@@ -18,10 +18,8 @@ export(Triangle)
 import(ggplot2)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
-importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
-importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(lubridate,day)
 importFrom(lubridate,days)
@@ -34,7 +32,10 @@ importFrom(lubridate,weeks)
 importFrom(lubridate,year)
 importFrom(lubridate,years)
 importFrom(methods,is)
-importFrom(plotly,ggplotly)
+importFrom(plotly,add_trace)
+importFrom(plotly,layout)
+importFrom(plotly,plot_ly)
+importFrom(reshape2,melt)
 importFrom(scales,comma)
 importFrom(scales,dollar)
 importFrom(stats,aggregate)
