--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme_bw)
 importFrom(lubridate,day)
 importFrom(lubridate,days)
 importFrom(lubridate,floor_date)
