Subscribers and acquisition

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,Acquisition)
 S3method(plot,Churn)
 S3method(plot,RevenueGrowthAccounting)
+S3method(plot,Subscribers)
 S3method(plot,Waterfall)
 S3method(print,Index)
 S3method(print,RevenueGrowthAccounting)
@@ -18,6 +19,7 @@ export(QuickRatioPlot)
 export(Retention)
 export(RevenueData)
 export(RevenueGrowthAccounting)
+export(Subscribers)
 export(Table)
 export(TimeSeriesColumnChart)
 export(Triangle)
@@ -30,12 +32,14 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme_bw)
+importFrom(lubridate,'%within%')
 importFrom(lubridate,day)
 importFrom(lubridate,days)
 importFrom(lubridate,floor_date)
 importFrom(lubridate,interval)
 importFrom(lubridate,month)
 importFrom(lubridate,quarter)
+importFrom(lubridate,seconds)
 importFrom(lubridate,week)
 importFrom(lubridate,weeks)
 importFrom(lubridate,year)
