Subscribers and revenue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(IndexDiagonal)
 export(LifetimeValue)
 export(QuickRatioPlot)
 export(Retention)
+export(Revenue)
 export(RevenueData)
 export(RevenueGrowthAccounting)
 export(Subscribers)
