--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,10 @@ export(Churn)
 export(CumulativeValuePlot)
 export(Diagonal)
 export(Growth)
+export(Heatmap)
 export(Index)
 export(IndexDiagonal)
+export(LayerCake)
 export(LifetimeValue)
 export(QuickRatioPlot)
 export(Retention)
@@ -27,6 +29,8 @@ export(Triangle)
 export(Waterfall)
 import(ggplot2)
 importFrom(flipFormat,FormatAsPercent)
+importFrom(flipFormat,FormatAsReal)
+importFrom(flipStandardCharts,Chart)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
@@ -47,9 +51,11 @@ importFrom(lubridate,year)
 importFrom(lubridate,years)
 importFrom(methods,is)
 importFrom(plotly,add_trace)
+importFrom(plotly,config)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(reshape2,melt)
+importFrom(scales,col_numeric)
 importFrom(scales,comma)
 importFrom(scales,dollar)
 importFrom(stats,aggregate)
