Hiding modebar + misc other things

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(plot,Waterfall)
 S3method(print,Index)
 S3method(print,RevenueGrowthAccounting)
 export(Acquisition)
+export(Bass)
 export(Churn)
 export(CumulativeValuePlot)
 export(Diagonal)
