Fixes for plotly upgrade

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ importFrom(lubridate,weeks)
 importFrom(lubridate,year)
 importFrom(lubridate,years)
 importFrom(methods,is)
+importFrom(plotly,add_annotations)
 importFrom(plotly,add_trace)
 importFrom(plotly,config)
 importFrom(plotly,layout)
@@ -56,5 +57,6 @@ importFrom(reshape2,melt)
 importFrom(scales,col_numeric)
 importFrom(scales,comma)
 importFrom(stats,aggregate)
+importFrom(stats,lm)
 importFrom(stats,supsmu)
 importFrom(stats,xtabs)
