--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(Subscribers)
 export(TimeSeriesColumnChart)
 export(Triangle)
 export(Waterfall)
+importFrom(anytime,anytime)
 importFrom(flipFormat,FormatAsPercent)
 importFrom(flipFormat,FormatAsReal)
 importFrom(flipStandardCharts,Chart)
