Adding "by" to most functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,20 @@ S3method(print,RevenueGrowthAccounting)
 export(Acquisition)
 export(Bass)
 export(Churn)
+export(CompleteListPeriodNames)
+export(ConnectedDotPlot)
+export(DaysPerPeriod)
 export(Diagonal)
+export(FillInMatrix)
+export(FillInVector)
 export(Growth)
 export(Heatmap)
 export(Index)
 export(IndexDiagonal)
 export(LayerCake)
 export(LifetimeValue)
+export(Period)
+export(PeriodNameToDate)
 export(QuickRatioPlot)
 export(Retention)
 export(Revenue)
@@ -25,7 +32,6 @@ export(Subscribers)
 export(TimeSeriesColumnChart)
 export(Triangle)
 export(Waterfall)
-importFrom(anytime,anytime)
 importFrom(flipFormat,FormatAsPercent)
 importFrom(flipFormat,FormatAsReal)
 importFrom(flipStandardCharts,Chart)
@@ -37,6 +43,7 @@ importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme_bw)
 importFrom(lubridate,'%within%')
+importFrom(lubridate,as_date)
 importFrom(lubridate,day)
 importFrom(lubridate,days)
 importFrom(lubridate,floor_date)
@@ -48,6 +55,7 @@ importFrom(lubridate,week)
 importFrom(lubridate,weeks)
 importFrom(lubridate,year)
 importFrom(lubridate,years)
+importFrom(lubridate,ymd)
 importFrom(methods,is)
 importFrom(plotly,add_annotations)
 importFrom(plotly,add_trace)
