Changing dependencies to flipTime + adding by to Subscribers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,7 @@ S3method(print,RevenueGrowthAccounting)
 export(Acquisition)
 export(Bass)
 export(Churn)
-export(CompleteListPeriodNames)
 export(ConnectedDotPlot)
-export(DaysPerPeriod)
 export(Diagonal)
 export(FillInMatrix)
 export(FillInVector)
@@ -21,21 +19,24 @@ export(Index)
 export(IndexDiagonal)
 export(LayerCake)
 export(LifetimeValue)
-export(Period)
-export(PeriodNameToDate)
 export(QuickRatioPlot)
 export(Retention)
 export(Revenue)
 export(RevenueData)
 export(RevenueGrowthAccounting)
 export(Subscribers)
-export(TimeSeriesColumnChart)
 export(Triangle)
 export(Waterfall)
 importFrom(flipFormat,FormatAsPercent)
 importFrom(flipFormat,FormatAsReal)
 importFrom(flipStandardCharts,Chart)
 importFrom(flipStatistics,Table)
+importFrom(flipTime,CompleteListPeriodNames)
+importFrom(flipTime,DaysPerPeriod)
+importFrom(flipTime,Period)
+importFrom(flipTime,PeriodNameToDate)
+importFrom(flipTime,Periods)
+importFrom(flipTime,TimeSeriesColumnChart)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
@@ -49,13 +50,13 @@ importFrom(lubridate,days)
 importFrom(lubridate,floor_date)
 importFrom(lubridate,interval)
 importFrom(lubridate,month)
+importFrom(lubridate,period)
 importFrom(lubridate,quarter)
 importFrom(lubridate,seconds)
 importFrom(lubridate,week)
 importFrom(lubridate,weeks)
 importFrom(lubridate,year)
 importFrom(lubridate,years)
-importFrom(lubridate,ymd)
 importFrom(methods,is)
 importFrom(plotly,add_annotations)
 importFrom(plotly,add_trace)
@@ -67,5 +68,4 @@ importFrom(scales,col_numeric)
 importFrom(scales,comma)
 importFrom(stats,aggregate)
 importFrom(stats,lm)
-importFrom(stats,supsmu)
 importFrom(stats,xtabs)
