--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ script:
   - R CMD build --no-manual --no-build-vignettes --no-resave-data .
   - R CMD check --as-cran --no-manual --no-build-vignettes --no-tests *.tar.gz
   - sudo Rscript -e 'install.packages("roxygen2")'
-  - if [ -d tests/testthat ]; then Rscript -e 'res<-devtools::test(); df <- as.data.frame(res); pass <- sum(df$failed)==0 && all(!df$error); quit(status=1-pass, save="no")'; fi
-
+  - if [ -d tests/testthat ]; then echo 'res<-devtools::test(); df <- as.data.frame(res); pass <- sum(df$failed)==0 && all(!df$error); quit(status=1-pass, save="no")' > run_test.R; R CMD BATCH --vanilla run_test.R; cat run_test.Rout; fi
 notifications:
   slack:
     rooms:
