Update travisCI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,7 @@ notifications:
     on_success: change
     on_failure: always
 
+after_success: >-
+  if [ $TRAVIS_EVENT_TYPE == 'push' ] ; then
+    Rscript -e 'require(devtools); install_github("NumbersInternational/travisCI"); library(travisCI); UpdateUpstream(use.local=T)';
+  fi
