--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: flipStartup
 Type: Package
 Title: Analytics for startups
 Version: 0.1.0
-Author: Tim Bock
-Maintainer: Tim Bock <tim.bock@numbers.net.au>
+Author: Displayr
+Maintainer: Displayr <opensource@displayr.com>
 Description: Various analytics to assist in the analysis of the performance of startups.
 License: GPL-3
 LazyData: TRUE
