--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: flipStartup
 Type: Package
 Title: Analytics for startups
 Version: 0.1.0
-Author: Displayr
+Author: Displayr <opensource@displayr.com>
 Maintainer: Displayr <opensource@displayr.com>
 Description: Various analytics to assist in the analysis of the performance of startups.
 License: GPL-3
