--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,12 +26,13 @@ export(RevenueGrowthAccounting)
 export(Subscribers)
 export(Triangle)
 export(Waterfall)
+export(removeIncompleteSubscriptions)
+export(removeLast)
 importFrom(flipFormat,FormatAsPercent)
 importFrom(flipFormat,FormatAsReal)
 importFrom(flipStandardCharts,Chart)
 importFrom(flipStatistics,Table)
 importFrom(flipTime,CompleteListPeriodNames)
-importFrom(flipTime,DaysPerPeriod)
 importFrom(flipTime,Period)
 importFrom(flipTime,PeriodNameToDate)
 importFrom(flipTime,Periods)
@@ -42,6 +43,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme_bw)
+importFrom(lubridate,"tz<-")
 importFrom(lubridate,'%within%')
 importFrom(lubridate,as_date)
 importFrom(lubridate,day)
@@ -52,6 +54,7 @@ importFrom(lubridate,month)
 importFrom(lubridate,period)
 importFrom(lubridate,quarter)
 importFrom(lubridate,seconds)
+importFrom(lubridate,tz)
 importFrom(lubridate,week)
 importFrom(lubridate,weeks)
 importFrom(lubridate,year)
