--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ importFrom(lubridate,year)
 importFrom(lubridate,years)
 importFrom(methods,is)
 importFrom(plotly,add_annotations)
+importFrom(plotly,add_text)
 importFrom(plotly,add_trace)
 importFrom(plotly,config)
 importFrom(plotly,layout)
