--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,9 +34,9 @@ importFrom(flipFormat,FormatAsPercent)
 importFrom(flipFormat,FormatAsReal)
 importFrom(flipStandardCharts,Chart)
 importFrom(flipStatistics,Table)
+importFrom(flipTime,AsDate)
 importFrom(flipTime,CompleteListPeriodNames)
 importFrom(flipTime,Period)
-importFrom(flipTime,PeriodNameToDate)
 importFrom(flipTime,Periods)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
