DS-1649 Fixing Layercake, by swapping *Chart* for *Area*

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(removeIncompleteSubscriptions)
 export(removeLast)
 importFrom(flipFormat,FormatAsPercent)
 importFrom(flipFormat,FormatAsReal)
+importFrom(flipStandardCharts,Area)
 importFrom(flipStandardCharts,Chart)
 importFrom(flipStatistics,Table)
 importFrom(flipTime,AsDate)
