Splitting year+ long transactions and renaming LifetimeValue as LifeTime

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(Heatmap)
 export(Index)
 export(IndexDiagonal)
 export(LayerCake)
+export(Lifetime)
 export(LifetimeValue)
 export(QuickRatioPlot)
 export(Retention)
@@ -37,6 +38,7 @@ importFrom(flipStandardCharts,Chart)
 importFrom(flipStatistics,Table)
 importFrom(flipTime,AsDate)
 importFrom(flipTime,CompleteListPeriodNames)
+importFrom(flipTime,DiffPeriod)
 importFrom(flipTime,Period)
 importFrom(flipTime,Periods)
 importFrom(ggplot2,aes)
