--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,5 +73,6 @@ importFrom(reshape2,melt)
 importFrom(scales,col_numeric)
 importFrom(scales,comma)
 importFrom(stats,aggregate)
+importFrom(stats,ave)
 importFrom(stats,lm)
 importFrom(stats,xtabs)
