DS-1810 and assorted tidying

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ importFrom(flipStandardCharts,Area)
 importFrom(flipStandardCharts,Chart)
 importFrom(flipStatistics,Table)
 importFrom(flipTime,AsDate)
+importFrom(flipTime,Change29FebTo28th)
 importFrom(flipTime,CompleteListPeriodNames)
 importFrom(flipTime,DiffPeriod)
 importFrom(flipTime,Period)
