--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,7 +53,9 @@ importFrom(lubridate,as_date)
 importFrom(lubridate,day)
 importFrom(lubridate,days)
 importFrom(lubridate,floor_date)
+importFrom(lubridate,hour)
 importFrom(lubridate,interval)
+importFrom(lubridate,minute)
 importFrom(lubridate,month)
 importFrom(lubridate,period)
 importFrom(lubridate,quarter)
