Adding recurring revenue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(IndexDiagonal)
 export(LayerCake)
 export(Lifetime)
 export(QuickRatioPlot)
+export(RecurringRevenue)
 export(Retention)
 export(Revenue)
 export(RevenueData)
@@ -49,6 +50,7 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme_bw)
 importFrom(lubridate,'%within%')
 importFrom(lubridate,as_date)
+importFrom(lubridate,ceiling_date)
 importFrom(lubridate,day)
 importFrom(lubridate,days)
 importFrom(lubridate,floor_date)
