importing as.duration

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme_bw)
 importFrom(lubridate,'%within%')
+importFrom(lubridate,as.duration)
 importFrom(lubridate,as_date)
 importFrom(lubridate,ceiling_date)
 importFrom(lubridate,day)
