data.fame input to RevenueData

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(as.data.frame,Trajectories)
 S3method(plot,Acquisition)
+S3method(plot,Churn)
 S3method(plot,RevenueGrowthAccounting)
 S3method(plot,Waterfall)
 S3method(print,Index)
@@ -19,6 +20,7 @@ export(Index)
 export(IndexDiagonal)
 export(LayerCake)
 export(Lifetime)
+export(PlotSubGroups)
 export(QuickRatioPlot)
 export(RecurringRevenue)
 export(Retention)
@@ -70,6 +72,7 @@ importFrom(plotly,add_trace)
 importFrom(plotly,config)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
+importFrom(plotly,subplot)
 importFrom(reshape2,melt)
 importFrom(scales,col_numeric)
 importFrom(scales,comma)
