DS-928: Move PriceSensitivityMeter from flipStandardCharts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(Index)
 export(IndexDiagonal)
 export(LayerCake)
 export(Lifetime)
+export(PriceSensitivityMeter)
 export(QuickRatioPlot)
 export(RecurringRevenue)
 export(Retention)
@@ -35,6 +36,8 @@ importFrom(flipFormat,FormatAsPercent)
 importFrom(flipFormat,FormatAsReal)
 importFrom(flipStandardCharts,Area)
 importFrom(flipStandardCharts,Chart)
+importFrom(flipStandardCharts,Line)
+importFrom(flipStandardCharts,autoFormatLongLabels)
 importFrom(flipStatistics,Table)
 importFrom(flipTime,AsDate)
 importFrom(flipTime,Change29FebTo28th)
@@ -48,6 +51,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme_bw)
+importFrom(grDevices,rgb)
 importFrom(lubridate,'%within%')
 importFrom(lubridate,as.duration)
 importFrom(lubridate,as_date)
