--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,13 +20,14 @@ export(Index)
 export(IndexDiagonal)
 export(LayerCake)
 export(Lifetime)
-export(PlotSubGroups)
 export(QuickRatioPlot)
 export(RecurringRevenue)
 export(Retention)
 export(Revenue)
 export(RevenueData)
+export(RevenueDataPreparation)
 export(RevenueGrowthAccounting)
+export(StartupMetric)
 export(Subscribers)
 export(Trajectories)
 export(Triangle)
