Fix Startupmetric plot using subplots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(flipFormat,FormatAsPercent)
 importFrom(flipFormat,FormatAsReal)
 importFrom(flipStandardCharts,Area)
 importFrom(flipStandardCharts,Chart)
+importFrom(flipStandardCharts,Column)
 importFrom(flipStandardCharts,Line)
 importFrom(flipStandardCharts,autoFormatLongLabels)
 importFrom(flipStatistics,Table)
