--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,27 @@
 
 S3method(Tab,Churn)
 S3method(Tab,default)
+S3method(YLim,Acquisition)
+S3method(YLim,Churn)
+S3method(YLim,Growth)
+S3method(YLim,default)
 S3method(as.data.frame,Trajectories)
 S3method(plot,Acquisition)
 S3method(plot,Churn)
+S3method(plot,ChurnByCohort)
+S3method(plot,Growth)
+S3method(plot,InitialChurn)
+S3method(plot,InitialRevenuePerSubscriber)
+S3method(plot,RevenueByCohort)
 S3method(plot,RevenueGrowthAccounting)
+S3method(plot,RevenuePerSubscriberByCohortByTime)
 S3method(plot,Waterfall)
 S3method(print,Index)
 S3method(print,RevenueGrowthAccounting)
 export(Acquisition)
 export(Bass)
 export(Churn)
+export(ChurnByCohort)
 export(ConnectedDotPlot)
 export(Diagonal)
 export(FillInMatrix)
@@ -20,6 +31,8 @@ export(Growth)
 export(Heatmap)
 export(Index)
 export(IndexDiagonal)
+export(InitialChurn)
+export(InitialRevenuePerSubscriber)
 export(LayerCake)
 export(Lifetime)
 export(PriceSensitivityMeter)
@@ -27,20 +40,22 @@ export(QuickRatioPlot)
 export(RecurringRevenue)
 export(Retention)
 export(Revenue)
+export(RevenueByCohort)
 export(RevenueData)
 export(RevenueGrowthAccounting)
+export(RevenuePerSubscriberByCohortByTime)
 export(StartupMetric)
 export(Subscribers)
 export(Tab)
 export(Trajectories)
 export(Triangle)
 export(Waterfall)
+export(YLim)
 export(removeIncompleteSubscriptions)
 export(removeLast)
 importFrom(flipFormat,FormatAsPercent)
 importFrom(flipFormat,FormatAsReal)
 importFrom(flipStandardCharts,Area)
-importFrom(flipStandardCharts,Chart)
 importFrom(flipStandardCharts,Column)
 importFrom(flipStandardCharts,Line)
 importFrom(flipStandardCharts,autoFormatLongLabels)
@@ -84,7 +99,9 @@ importFrom(plotly,subplot)
 importFrom(reshape2,melt)
 importFrom(scales,col_numeric)
 importFrom(scales,comma)
+importFrom(scales,rescale)
 importFrom(stats,aggregate)
 importFrom(stats,ave)
 importFrom(stats,lm)
+importFrom(stats,setNames)
 importFrom(stats,xtabs)
