--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(plot,RevenueByCohort)
 S3method(plot,RevenueGrowthAccounting)
 S3method(plot,RevenuePerSubscriberByCohortByTime)
 S3method(plot,Waterfall)
+S3method(print,ChurnByCohort)
 S3method(print,Index)
 S3method(print,RevenueGrowthAccounting)
 export(Acquisition)
@@ -95,12 +96,12 @@ importFrom(plotly,config)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
 importFrom(plotly,subplot)
+importFrom(plyr,mapvalues)
 importFrom(reshape2,melt)
 importFrom(scales,col_numeric)
+importFrom(scales,colour_ramp)
 importFrom(scales,comma)
-importFrom(scales,rescale)
 importFrom(stats,aggregate)
 importFrom(stats,ave)
 importFrom(stats,lm)
-importFrom(stats,setNames)
 importFrom(stats,xtabs)
