DS-928: Add control for num decimals in labels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,4 +80,6 @@ importFrom(scales,comma)
 importFrom(stats,aggregate)
 importFrom(stats,ave)
 importFrom(stats,lm)
+importFrom(stats,splinefun)
+importFrom(stats,uniroot)
 importFrom(stats,xtabs)
