--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ importFrom(scales,comma)
 importFrom(stats,aggregate)
 importFrom(stats,ave)
 importFrom(stats,lm)
+importFrom(stats,quantile)
 importFrom(stats,splinefun)
 importFrom(stats,uniroot)
 importFrom(stats,xtabs)
