--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,13 +11,18 @@ S3method(plot,ChurnByCohort)
 S3method(plot,Growth)
 S3method(plot,InitialChurn)
 S3method(plot,InitialRevenuePerSubscriber)
+S3method(plot,MeanRecurringRevenue)
+S3method(plot,MeanRecurringRevenueByCohort)
 S3method(plot,RecurringRevenue)
 S3method(plot,RevenueByCohort)
 S3method(plot,RevenueGrowthAccounting)
 S3method(plot,RevenuePerSubscriberByCohortByTime)
 S3method(plot,Waterfall)
+S3method(print,Churn)
 S3method(print,ChurnByCohort)
 S3method(print,Index)
+S3method(print,MeanRecurringRevenue)
+S3method(print,MeanRecurringRevenueByCohort)
 S3method(print,RevenueGrowthAccounting)
 export(Acquisition)
 export(Bass)
@@ -36,6 +41,16 @@ export(InitialChurn)
 export(InitialRevenuePerSubscriber)
 export(LayerCake)
 export(Lifetime)
+export(MeanRecurringRevenue)
+export(MeanRecurringRevenue180Days)
+export(MeanRecurringRevenue2Years)
+export(MeanRecurringRevenue30Days)
+export(MeanRecurringRevenue90Days)
+export(MeanRecurringRevenueByCohort)
+export(MeanRecurringRevenueByMonthCohort)
+export(MeanRecurringRevenueByQuarterCohort)
+export(MeanRecurringRevenueByYearCohort)
+export(MeanRecurringRevenueInitial)
 export(PriceSensitivityMeter)
 export(QuickRatioPlot)
 export(RecurringRevenue)
@@ -89,6 +104,7 @@ importFrom(lubridate,weeks)
 importFrom(lubridate,year)
 importFrom(lubridate,years)
 importFrom(methods,is)
+importFrom(plotly,`%>%`)
 importFrom(plotly,add_annotations)
 importFrom(plotly,add_text)
 importFrom(plotly,add_trace)
