--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,21 +9,21 @@ S3method(plot,Acquisition)
 S3method(plot,Churn)
 S3method(plot,ChurnByCohort)
 S3method(plot,Growth)
+S3method(plot,GrowthAccounting)
 S3method(plot,InitialChurn)
 S3method(plot,InitialRevenuePerSubscriber)
 S3method(plot,MeanRecurringRevenue)
 S3method(plot,MeanRecurringRevenueByCohort)
 S3method(plot,RecurringRevenue)
 S3method(plot,RevenueByCohort)
-S3method(plot,RevenueGrowthAccounting)
 S3method(plot,RevenuePerSubscriberByCohortByTime)
 S3method(plot,Waterfall)
 S3method(print,Churn)
 S3method(print,ChurnByCohort)
+S3method(print,GrowthAccounting)
 S3method(print,Index)
 S3method(print,MeanRecurringRevenue)
 S3method(print,MeanRecurringRevenueByCohort)
-S3method(print,RevenueGrowthAccounting)
 export(Acquisition)
 export(Bass)
 export(Churn)
@@ -34,6 +34,7 @@ export(Diagonal)
 export(FillInMatrix)
 export(FillInVector)
 export(Growth)
+export(GrowthAccounting)
 export(Heatmap)
 export(Index)
 export(IndexDiagonal)
@@ -58,7 +59,6 @@ export(Retention)
 export(Revenue)
 export(RevenueByCohort)
 export(RevenueData)
-export(RevenueGrowthAccounting)
 export(RevenuePerSubscriberByCohortByTime)
 export(StartupMetric)
 export(Subscribers)
