--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ export(ConnectedDotPlot)
 export(CustomerChurn)
 export(Detail)
 export(Diagonal)
+export(FillInDateRowsInMatrix)
+export(FillInDateVector)
 export(FillInMatrix)
 export(FillInVector)
 export(Growth)
