--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,11 +19,9 @@ S3method(plot,RecurringRevenue)
 S3method(plot,RevenueByCohort)
 S3method(plot,RevenuePerSubscriberByCohortByTime)
 S3method(plot,Waterfall)
-S3method(print,Churn)
 S3method(print,ChurnByCohort)
 S3method(print,GrowthAccounting)
 S3method(print,Index)
-S3method(print,MeanRecurringRevenue)
 S3method(print,MeanRecurringRevenueByCohort)
 export(Acquisition)
 export(Bass)
@@ -31,6 +29,7 @@ export(Churn)
 export(ChurnByCohort)
 export(ConnectedDotPlot)
 export(CustomerChurn)
+export(CustomerChurnByCohort)
 export(Detail)
 export(Diagonal)
 export(FillInDateRowsInMatrix)
@@ -52,6 +51,7 @@ export(MeanRecurringRevenue)
 export(MeanRecurringRevenue180Days)
 export(MeanRecurringRevenue2Years)
 export(MeanRecurringRevenue30Days)
+export(MeanRecurringRevenue365Days)
 export(MeanRecurringRevenue90Days)
 export(MeanRecurringRevenueByCohort)
 export(MeanRecurringRevenueByMonthCohort)
@@ -63,6 +63,7 @@ export(PriceSensitivityMeter)
 export(QuickRatioPlot)
 export(RecurringRevenue)
 export(RecurringRevenueChurn)
+export(RecurringRevenueChurnByCohort)
 export(Retention)
 export(Revenue)
 export(RevenueByCohort)
