--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(as.data.frame,Trajectories)
 S3method(plot,Acquisition)
 S3method(plot,Churn)
 S3method(plot,ChurnByCohort)
+S3method(plot,Customers)
 S3method(plot,Growth)
 S3method(plot,GrowthAccounting)
 S3method(plot,InitialChurn)
@@ -26,10 +27,10 @@ S3method(print,MeanRecurringRevenueByCohort)
 export(Acquisition)
 export(Bass)
 export(Churn)
-export(ChurnByCohort)
 export(ConnectedDotPlot)
 export(CustomerChurn)
 export(CustomerChurnByCohort)
+export(Customers)
 export(Detail)
 export(Diagonal)
 export(FillInDateRowsInMatrix)
