--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(Detail,default)
 S3method(YLim,default)
 S3method(as.data.frame,Trajectories)
 S3method(plot,Acquisition)
+S3method(plot,AnnualNetRecurringRevenueRetention)
 S3method(plot,Churn)
 S3method(plot,ChurnByCohort)
 S3method(plot,Customers)
@@ -23,6 +24,7 @@ S3method(print,GrowthAccounting)
 S3method(print,Index)
 S3method(print,MeanRecurringRevenueByCohort)
 export(Acquisition)
+export(AnnualNetRecurringRevenueRetention)
 export(Churn)
 export(CustomerChurn)
 export(CustomerChurnByCohort)
