DS-3136 Replace sum and variants with verbs equivalents (#1)
* DS-3136 Replace sum with verbs equivalents

* fixup! DS-3136 Replace sum with verbs equivalents

* DS-3136 Version bump

* Replace colSums use with SumColumns; DS-3136

Co-authored-by: flipDevTools <opensource@displayr.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,3 +81,5 @@ importFrom(stats,aggregate)
 importFrom(stats,ave)
 importFrom(stats,lm)
 importFrom(stats,xtabs)
+importFrom(verbs,Sum)
+importFrom(verbs,SumColumns)
