--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: flipStartup
 Type: Package
 Title: Analytics for startups
-Version: 1.2.17
+Version: 1.2.18
 Author: Displayr <opensource@displayr.com>
 Maintainer: Displayr <opensource@displayr.com>
 Description: Various analytics to assist in the analysis of the performance of startups.
@@ -21,11 +21,13 @@ Imports:
     plotly,
     reshape2,
     scales,
-    stats
+    stats,
+    verbs
 Remotes:
     Displayr/flipFormat,
     Displayr/flipStatistics,
     Displayr/flipStandardCharts,
     Displayr/flipTime,
-RoxygenNote: 7.0.2
+    Displayr/verbs
+RoxygenNote: 7.1.1
 Encoding: UTF-8
