--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ warnings_are_errors: false
 # update pre-installed packages to latest versions
 before_install:
   - export R_REMOTES_NO_ERRORS_FROM_WARNINGS="true"
+  - mkdir -p ~/.R/
+  - echo "CXXFLAGS = `R CMD config CXXFLAGS` -g0 -flto -Wno-unused-local-typedefs" >> ~/.R/Makevars
+  - echo "CXXFLAGS += -w" >> ~/.R/Makevars
+  - echo "CXX14FLAGS = -w -O3" >> ~/.R/Makevars
   - sudo add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
   - sudo apt-get -qq update
   - sudo apt-get install -y libgdal-dev libproj-dev python-protobuf libprotoc-dev libprotobuf-dev libv8-dev librsvg2-dev libmpfr-dev libnlopt-dev
