--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Imports:
     flipStatistics,
     flipStandardCharts,
     flipTime (>= 2.7.7),
+    flipU,
     ggplot2,
     lubridate,
     methods,
@@ -24,6 +25,7 @@ Imports:
     stats,
     verbs
 Remotes:
+    Displayr/flipU,
     Displayr/flipFormat,
     Displayr/flipStatistics,
     Displayr/flipStandardCharts,
