--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ importFrom(flipTime,CompleteListPeriodNames)
 importFrom(flipTime,DiffPeriod)
 importFrom(flipTime,Period)
 importFrom(flipTime,Periods)
+importFrom(flipU,ConvertCommaSeparatedStringToVector)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
