--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,3 +84,4 @@ importFrom(stats,lm)
 importFrom(stats,xtabs)
 importFrom(verbs,Sum)
 importFrom(verbs,SumColumns)
+importFrom(verbs,SumEmptyHandling)
