--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,5 +83,5 @@ importFrom(stats,ave)
 importFrom(stats,lm)
 importFrom(stats,xtabs)
 importFrom(verbs,Sum)
-importFrom(verbs,SumColumns)
+importFrom(verbs,SumEachColumn)
 importFrom(verbs,SumEmptyHandling)
