--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  r-packages: displayr/r-packages@dev:a3915ebdf5faa6407bb44246bf268c8ef0baee46
+  r-packages: displayr/r-packages@dev:alpha
 parameters:
   trigger-message:
     type: string
