EH-767: Use flipU::StopForUserError to handle errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(flipTime,DiffPeriod)
 importFrom(flipTime,Period)
 importFrom(flipTime,Periods)
 importFrom(flipU,ConvertCommaSeparatedStringToVector)
+importFrom(flipU,StopForUserError)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
