--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ importFrom(flipStandardCharts,Area)
 importFrom(flipStandardCharts,Chart)
 importFrom(flipStandardCharts,Line)
 importFrom(flipStandardCharts,autoFormatLongLabels)
+importFrom(flipStandardCharts,charToNumeric)
 importFrom(flipStatistics,Table)
 importFrom(flipTime,AsDate)
 importFrom(flipTime,Change29FebTo28th)
