--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ parameters:
     default: ""
   remote-deps:
     type: string
-    default: ""
+    default: "Displayr/flipStandardCharts@1.32.6"
   plugins-branch:
     type: string
     default: ""
