--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: flipStartup
 Type: Package
 Title: Analytics for startups
-Version: 1.3.4
+Version: 1.3.5
 Author: Displayr <opensource@displayr.com>
 Maintainer: Displayr <opensource@displayr.com>
 Description: Various analytics to assist in the analysis of the performance of startups.
@@ -13,7 +13,7 @@ Suggests:
 Imports:
     flipFormat,
     flipStatistics,
-    flipStandardCharts,
+    flipStandardCharts (>= 1.32.6),
     flipTime (>= 2.7.7),
     flipU (>= 1.6.2),
     ggplot2,
